--- a/style.css
+++ b/style.css
@@ -86,3 +86,42 @@ p {
 .email-link:hover {
   text-decoration: underline;
 }
+
+@media (max-width: 667px) {
+  body {
+    margin: 100px 20px;
+  }
+
+  h1 {
+    font-size: 26px;
+  }
+
+  h2,
+  h3 {
+    font-size: 18px;
+  }
+
+  .email-link,
+  .navbar-brand,
+  .navbar-toggler {
+    font-size: 16px;
+  }
+
+  p,
+  .navigation-links,
+  .primary-link {
+    font-size: 14px;
+  }
+
+  .footer {
+    display: none;
+  }
+
+  .img-fluid {
+    margin-bottom: 20px;
+  }
+
+  .img-mobile {
+    margin-bottom: 40px;
+  }
+}
