--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  margin-top: 100px;
+  margin: 100px 0;
 }
 
 h1,
@@ -49,6 +49,10 @@ p {
   text-transform: capitalize;
   background: var(--primary-color);
   box-shadow: var(--box-shadow);
+  color: white;
+}
+
+.primary-link:hover {
   color: white;
 }
 
@@ -117,11 +121,8 @@ p {
     display: none;
   }
 
-  .img-fluid {
-    margin-bottom: 20px;
-  }
-
-  .img-mobile {
-    margin-bottom: 40px;
+  .project-link {
+    display: block;
+    text-align: center;
   }
 }
