Add google fonts

--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 
 body {
   margin: 100px 0;
+  font-family: "Nunito", sans-serif;
 }
 
 h1,
@@ -16,6 +17,7 @@ h3 {
 
 h1 {
   font-size: 96px;
+  font-family: "Playfair Display", serif;
 }
 
 h2 {
