--- a/style.css
+++ b/style.css
@@ -1,27 +1,34 @@
 :root {
-  --primary-color: #6c63ff;
-  --secondary-color: #f5f2fe;
+  --primary-color: #517783;
+  --secondary-color: #e9e3dc;
   --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 body {
+  color: #1c2528;
   margin: 100px 0;
-  font-family: "Nunito", sans-serif;
+  font-family: "Rubik", sans-serif;
+  font-weight: 300;
 }
 
 h1,
 h2,
 h3 {
-  margin: 0;
+  margin: 50px 10px 0 10px;
 }
 
 h1 {
-  font-size: 96px;
-  font-family: "Playfair Display", serif;
+  font-size: 94px;
+  /* font-family: "Sorts Mill Goudy", serif; */
+  font-family: "Over the Rainbow", cursive;
+  font-weight: 300;
+  /* line-height: 1; */
 }
 
 h2 {
-  font-size: 48px;
+  color: #3c4649;
+  font-size: 40px;
+  font-weight: 300;
 }
 
 h3 {
@@ -73,14 +80,21 @@ p {
   display: block;
 }
 
-.about-paragraphs {
-  margin: 30px 0;
+.about-section {
+  background-color: var(--secondary-color);
 }
 
 .about-paragraphs p {
-  margin: 10px;
+  margin: 50px 10px 0 10px;
 }
 
+.about-img {
+  margin-top: 30px;
+}
+
+.contact-button {
+  margin: 50px 10px 0 10px;
+}
 .email-link {
   display: flex;
   justify-content: center;
