--- a/style.css
+++ b/style.css
@@ -80,11 +80,12 @@ p {
   display: block;
 }
 
-.about-section {
+.content-container {
   background-color: var(--secondary-color);
+  /* margin: 30px 0; */
 }
 
-.about-paragraphs p {
+.content p {
   margin: 50px 10px 0 10px;
 }
 
