build portfolio project header and adjust styling

--- a/style.css
+++ b/style.css
@@ -43,12 +43,16 @@ p {
 
 .navigation-links {
   display: flex;
-  margin-top: 40px;
-  justify-content: center;
+  margin: 10px 25px;
+  justify-content: end;
 }
 
-.navigation-links a {
-  margin: 20px;
+.navbar-light .navbar-nav .nav-link:hover {
+  color: pink;
+}
+
+.navbar-light .navbar-nav .nav-link.active {
+  color: rgb(249, 109, 132);
 }
 
 .primary-link {
