--- a/style.css
+++ b/style.css
@@ -104,12 +104,43 @@ p {
   display: flex;
   justify-content: center;
   color: var(--primary-color);
-  font-size: 28px;
+  font-size: 24px;
   text-decoration: none;
 }
 
 .email-link:hover {
-  text-decoration: underline;
+  color: pink;
+}
+
+footer {
+  margin: 60px 0;
+}
+
+footer .email-link {
+  text-decoration: none;
+  color: var(--primary-color);
+  font-size: 24px;
+  text-align: center;
+}
+
+footer .email-link:hover {
+  color: pink;
+}
+
+footer .social-links a {
+  text-decoration: none;
+  color: rgb(249, 109, 132);
+  background-color: pink;
+  font-size: 24px;
+  padding: 15px;
+  border-radius: 50%;
+  margin: 40px 20px;
+  transition: all 150ms ease-in-out;
+}
+
+footer .social-links a:hover {
+  color: pink;
+  background-color: rgb(249, 109, 132);
 }
 
 @media (max-width: 667px) {
