--- a/style.css
+++ b/style.css
@@ -14,26 +14,23 @@ body {
 h1,
 h2,
 h3 {
-  margin: 50px 10px 0 10px;
+  font-weight: 300;
+  /* margin: 50px 5px 0 10px; */
 }
 
 h1 {
   font-size: 94px;
-  /* font-family: "Sorts Mill Goudy", serif; */
   font-family: "Over the Rainbow", cursive;
-  font-weight: 300;
-  /* line-height: 1; */
 }
 
 h2 {
   color: #3c4649;
   font-size: 40px;
-  font-weight: 300;
 }
 
 h3 {
   font-size: 24px;
-  opacity: 0.7;
+  /* opacity: 0.7; */
 }
 
 p {
@@ -66,7 +63,7 @@ p {
 }
 
 .primary-link:hover {
-  color: white;
+  color: pink;
 }
 
 .secondary-link {
@@ -86,7 +83,7 @@ p {
 
 .content-container {
   background-color: var(--secondary-color);
-  /* margin: 30px 0; */
+  border-radius: 4px;
 }
 
 .content p {
@@ -114,6 +111,16 @@ p {
 
 footer {
   margin: 60px 0;
+}
+
+footer .contact-box {
+  background-color: var(--secondary-color);
+  padding: 35px;
+  border-radius: 4px;
+}
+
+footer .contact-box p {
+  margin: 0;
 }
 
 footer .email-link {
