--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 :root {
-  --primary-color: #517783;
-  --secondary-color: #e9e3dc;
-  --tertiary-color: pink;
+  --primary-color: rgb(81, 121, 133);
+  --secondary-color: rgb(235, 229, 224);
+  --tertiary-color: rgb(255, 194, 204);
   --quaternary-color: rgb(249, 109, 132);
-  --quinary-color: #3c4649;
-  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+  --quinary-color: rgb(60, 70, 73);
+  /* --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3); */
 }
 
 body {
@@ -15,14 +15,34 @@ body {
 }
 
 h1,
-h2,
-h3 {
+h2 {
   font-weight: 300;
+}
+
+h3,
+h4 {
+  font-weight: 400;
 }
 
 h1 {
   font-size: 94px;
   font-family: "Over the Rainbow", cursive;
+}
+
+.h1-shadow-hp {
+  filter: drop-shadow(0 0 30px rgba(143, 126, 214, 0.9));
+}
+
+.h1-shadow-about {
+  filter: drop-shadow(0 0 30px rgba(249, 109, 132, 0.9));
+}
+
+.h1-shadow-projects {
+  filter: drop-shadow(0 0 30px rgba(255, 223, 93, 0.9));
+}
+
+.h1-shadow-contact {
+  filter: drop-shadow(0 0 30px rgba(81, 121, 133, 0.9));
 }
 
 h2 {
@@ -35,7 +55,7 @@ h3 {
 
 p {
   font-size: 20px;
-  line-height: 1.5;
+  line-height: 1.6;
 }
 
 .navigation-links {
@@ -53,8 +73,8 @@ p {
 }
 
 .primary-link {
-  border-radius: 4px;
-  padding: 20px 15px;
+  border-radius: 50px;
+  padding: 15px 15px;
   text-decoration: none;
   text-transform: capitalize;
   background: var(--primary-color);
@@ -94,17 +114,22 @@ p {
 }
 
 .introduction-content {
-  margin-top: 120px;
+  margin-top: 60px;
 }
 
 .introduction-paragraph {
   position: relative;
   padding: 26px 0 26px 26px;
-  border-left: 2px solid rgb(249, 109, 132);
+  border-left: 2px dotted rgba(143, 126, 214, 0.6);
 }
 
 .img-vicky {
   margin-top: 30px;
+}
+
+.img-container img {
+  display: block;
+  /* filter: drop-shadow(0 0 30px rgba(249, 109, 132, 0.6)); */
 }
 
 .contact-button {
@@ -154,13 +179,40 @@ footer .social-links a {
   font-size: 24px;
   padding: 15px;
   border-radius: 50%;
-  margin: 40px 20px;
+  margin: 0 20px;
   transition: all 150ms ease-in-out;
 }
 
 footer .social-links a:hover {
   color: pink;
   background-color: rgb(249, 109, 132);
+}
+
+footer .github-link {
+  color: var(--quaternary-color);
+  position: relative;
+  text-decoration: none;
+  transition: all 0.3s ease-in-out;
+}
+
+footer .github-link:hover {
+  color: var(--quinary-color);
+}
+
+footer .github-link::before {
+  background-color: hsla(350, 100%, 88%, 0.6);
+  bottom: -1px;
+  content: "";
+  display: block;
+  height: 0;
+  left: 0;
+  position: absolute;
+  transition: all 0.3s ease-in-out;
+  width: 100%;
+}
+
+footer .github-link:hover::before {
+  height: 100%;
 }
 
 @media (max-width: 1024px) {
@@ -189,6 +241,10 @@ footer .social-links a:hover {
   .navbar-brand,
   .navbar-toggler {
     font-size: 14px;
+  }
+
+  .introduction-content {
+    margin-top: 30px;
   }
 
   .footer {
