--- a/style.css
+++ b/style.css
@@ -101,6 +101,15 @@ p {
   display: block;
 }
 
+.start-section {
+  --mask: radial-gradient(34.99px at 50% 48px, #000 99%, #0000 101%)
+      calc(50% - 60px) 0/120px 100%,
+    radial-gradient(34.99px at 50% -18px, #0000 99%, #000 101%) 50% 30px/120px
+      100% repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
 .content-container {
   align-items: center;
   background-color: var(--secondary-color);
@@ -109,12 +118,12 @@ p {
   display: flex;
 }
 
-.content p {
+/* .content p {
   margin: 50px 10px 0 10px;
-}
+} */
 
 .introduction-content {
-  margin-top: 60px;
+  margin-top: 120px;
 }
 
 .introduction-paragraph {
@@ -151,7 +160,20 @@ footer {
   margin: 60px 0;
 }
 
-footer .contact-box {
+.footer-container {
+  --mask: radial-gradient(
+        34.99px at 50% calc(100% - 48px),
+        #000 99%,
+        #0000 101%
+      )
+      calc(50% - 60px) 0/120px 100%,
+    radial-gradient(34.99px at 50% calc(100% + 18px), #0000 99%, #000 101%) 50%
+      calc(100% - 30px) / 120px 100% repeat-x;
+  -webkit-mask: var(--mask);
+  mask: var(--mask);
+}
+
+/* footer .contact-box {
   background-color: var(--secondary-color);
   padding: 35px;
   border-radius: 4px;
@@ -170,7 +192,7 @@ footer .email-link {
 
 footer .email-link:hover {
   color: pink;
-}
+} */
 
 footer .social-links a {
   text-decoration: none;
