Improve about page design

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   --tertiary-color: rgb(255, 194, 204);
   --quaternary-color: rgb(249, 109, 132);
   --quinary-color: rgb(60, 70, 73);
-  /* --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3); */
+  --box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
 }
 
 body {
@@ -55,7 +55,7 @@ h3 {
 
 p {
   font-size: 20px;
-  line-height: 1.6;
+  line-height: 1.7;
 }
 
 .navigation-links {
@@ -74,6 +74,7 @@ p {
 
 .primary-link {
   border-radius: 50px;
+  border: none;
   padding: 15px 15px;
   text-decoration: none;
   text-transform: capitalize;
@@ -81,6 +82,7 @@ p {
   box-shadow: var(--box-shadow);
   color: white;
   min-width: 120px;
+  cursor: pointer;
 }
 
 .primary-link:hover {
@@ -114,9 +116,12 @@ p {
 .content-container {
   align-items: center;
   background-color: rgba(235, 229, 224, 0.5);
-  border-radius: 4px;
   padding: 50px;
-  display: flex;
+  /* display: flex; */
+}
+
+.content2-container {
+  padding: 50px;
 }
 
 .introduction-content {
@@ -133,19 +138,11 @@ p {
   margin-top: 30px;
 }
 
-.img-container img {
-  display: block;
-  /* filter: drop-shadow(0 0 30px rgba(249, 109, 132, 0.6)); */
-}
-
 .img-about {
   border: 5px dotted rgba(235, 229, 224, 0.7);
   padding: 15px;
 }
 
-.contact-button {
-  margin: 50px 10px 0 10px;
-}
 .email-link {
   display: flex;
   justify-content: center;
@@ -158,8 +155,26 @@ p {
   color: pink;
 }
 
-footer {
-  margin: 60px 0;
+.wavy-line {
+  --s: 24px;
+  --b: 6px;
+  --m: 0.9;
+  --R: calc(var(--s) * sqrt(var(--m) * var(--m) + 1) + var(--b) / 2);
+  height: calc(2 * var(--R));
+  width: 100%;
+  --_g: #0000 calc(99% - var(--b)), #000 calc(101% - var(--b)) 99%, #0000 101%;
+  mask: radial-gradient(
+        var(--R) at left 50% bottom calc(-1 * var(--m) * var(--s)),
+        var(--_g)
+      )
+      calc(50% - 2 * var(--s)) calc(50% - var(--s) / 2 - var(--b) / 2) /
+      calc(4 * var(--s)) calc(var(--s) + var(--b)) repeat-x,
+    radial-gradient(
+        var(--R) at left 50% top calc(-1 * var(--m) * var(--s)),
+        var(--_g)
+      )
+      50% calc(50% + var(--s) / 2 + var(--b) / 2) / calc(4 * var(--s))
+      calc(var(--s) + var(--b)) repeat-x;
 }
 
 .footer-container {
@@ -175,36 +190,17 @@ footer {
   mask: var(--mask);
 }
 
-/* footer .contact-box {
-  background-color: var(--secondary-color);
-  padding: 35px;
-  border-radius: 4px;
-}
-
-footer .contact-box p {
-  margin: 0;
-}
-
-footer .email-link {
-  text-decoration: none;
-  color: var(--primary-color);
-  font-size: 24px;
-  text-align: center;
-}
-
-footer .email-link:hover {
-  color: pink;
-} */
-
 .social-links a {
   text-decoration: none;
   color: var(--quaternary-color);
   background-color: var(--tertiary-color);
-  font-size: 24px;
+  font-size: 20px;
   padding: 15px;
   border-radius: 50%;
   margin: 0 20px;
   transition: all 150ms ease-in-out;
+  box-shadow: var(--box-shadow);
+  cursor: pointer;
 }
 
 .social-links a:hover {
@@ -220,13 +216,12 @@ footer .github-link {
 }
 
 .icons {
-  text-decoration: none;
   color: var(--tertiary-color);
   background-color: var(--quaternary-color);
-  font-size: 20px;
-  padding: 14px 8px;
+  font-size: 18px;
+  padding: 15px 10px;
   border-radius: 50%;
-  margin: 0 20px;
+  margin-right: 10px;
 }
 
 footer .github-link:hover {
@@ -261,8 +256,13 @@ footer .github-link:hover::before {
   h2 {
     font-size: 24px;
   }
+
   h3 {
     font-size: 18px;
+  }
+
+  h4 {
+    font-size: 16px;
   }
 
   p,
@@ -281,12 +281,12 @@ footer .github-link:hover::before {
     margin-top: 30px;
   }
 
-  .footer {
-    display: none;
-  }
-
   .project-link {
     display: block;
     text-align: center;
+  }
+
+  .icons {
+    display: none;
   }
 }
